Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52975

QSSLSocket read fail on iOS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.2, 5.7.1
    • 5.5.1, 5.6.0
    • Network: SSL
    • Mac OS X Il Capitain, target: iphonesimulator
    • iOS/tvOS/watchOS
    • faeaddc1b92f1000a5a1d9d7cdea9276bdfefe26

      My app (iOS 9.x simulator) connects to my server (Win 64bit).

      Both are written in Qt and they communicate over QSslSocket.
      On Desktop it works perfect.

      Running the app on the device simulator the QSslSocket (client side) emits error(QAbstractSocket::SocketError) with the following:

      Socket state: 1
      Socket state: 2
      Socket state: 3
      Socket state: 6
      Socket state: 0
      QAbstractSocket::SocketError(20)
      "SSLRead failed: -50"

      I found this error in Apple API error list:
      https://www.osstatus.com/search/results?platform=all&framework=all&search=-50

      it says, that:
      Security
      SecBase.h errSecParam
      -50 One or more parameters passed to the function were not valid.

      The strange thing is that is that everything seems to work with this error on server side.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            cdsmika Tseluyko Dmitriy
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes