src/network/ssl/qsslsocket_mac.cpp
@@ -2633,6 +2633,8 @@ name|nextDataBlockSize
 argument_list|()
 operator|>
 literal|0
+operator|&&
+name|context
 condition|)
 block|{
 specifier|const
@@ -2787,7 +2789,7 @@ name|data
 decl_stmt|;
 while|while
 condition|(
-literal|true
+name|context
 condition|)
 block|{
 name|size_t
@@ -6256,11 +6258,23 @@ name|sslErrors
 operator|=
 name|errors
 expr_stmt|;
+comment|// checkSslErrors unconditionally emits sslErrors:
+comment|// a user's slot can abort/close/disconnect on this
+comment|// signal, so we also test the socket's state:
 if|if
 condition|(
 operator|!
 name|checkSslErrors
 argument_list|()
+operator|||
+name|q
+operator|->
+name|state
+argument_list|()
+operator|!=
+name|QAbstractSocket
+operator|::
+name|ConnectedState
 condition|)
 return|return
 literal|false
